--- a/test-three/templates/layouts/presentation.pug
+++ b/test-three/templates/layouts/presentation.pug
@@ -12,10 +12,11 @@ block config
         twitter: 'author twitter goes here',
         github: 'author github goes here',
       },
-      theme: 'coshx',
+      theme: 'theme name goes here', // name only, e.g. 'coshx', not 'coshx.css' or 'css/theme/coshx.css'
     };
   -
-  - var background = { image: '/images/coshx-background.png', size: 'contain'}
+  - var slideBackground = {'data-background-size': 'contain', 'data-background-image': '/images/coshx-background.png'}
+    
 //- +slide(data-background-size="contain" data-background-image="/images/coshx-background.png")
 doctype html
 html
