configure remote control via cell phone; add a demo "note" to the slide deck

--- a/test-three/templates/index.pug
+++ b/test-three/templates/index.pug
@@ -16,6 +16,7 @@ block slides
     +slide&attributes(slideBackground)
         h1= config.title
         h5 This title slide uses config.title
+        aside.notes This is a note
     +slide&attributes(slideBackground)
         h1 Setup pt. 1
         h5 'presentation.pug': Edit config settings
