--- a/test-three/templates/index.pug
+++ b/test-three/templates/index.pug
@@ -16,6 +16,7 @@ block slides
     +slide&attributes(slideBackground)
         h1= config.title
         h5 This title slide uses config.title
+        h6 press "s" to open presenter notes
         aside.notes This is a note
     +slide&attributes(slideBackground)
         h1 Setup pt. 1
@@ -43,6 +44,7 @@ block slides
                 |  history: true,
                 |  width: '100%',
                 |  height: '100%',
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Setup pt. 2
         h5 'index.pug': Overwrite Config settings in 'block append config'
@@ -55,13 +57,14 @@ block slides
                 |    config.author.name = '@coshx';
                 |    config.author.link = 'https://github.com/coshx'
                 |  -
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1= config.title
         p= config.description
         p
             small.
                 Demo created by #[a(href= config.author.link)= config.author.name]
-        
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 1
         h5 'index.pug': Start building slides using the '+slide' mixin
@@ -74,6 +77,7 @@ block slides
                 |    p
                 |        small.
                 |            Demo created by \#[a(href= config.author.link)= config.author.name]
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1  Ruby, Rails, & some puppet
         ul
@@ -81,7 +85,8 @@ block slides
             li Slides:
                 a(href="https://coshx.com/talks" target="_blank")  https://coshx.com/talks
             li Completed Labs:
-                a(href="https://github.com/btaitelb/ruby_rails_puppet_training" target="_blank")  https://github.com/btaitelb/ruby_rails_puppet_training                
+                a(href="https://github.com/btaitelb/ruby_rails_puppet_training" target="_blank")  https://github.com/btaitelb/ruby_rails_puppet_training
+        aside.notes Put presenter notes here               
     +slide&attributes(slideBackground)
         h1 Slide 2 Code
         h5 Headers, Unordered Lists and Links
@@ -94,7 +99,7 @@ block slides
                 |        a(href="https://coshx.com/talks" target="_blank")  https://coshx.com/talks
                 |    li Completed Labs:
                 |        a(href= "https://github.com/btaitelb/ruby_rails_puppet_training" target="_blank") https://github.com/btaitelb/ruby_rails_puppet_training
-                
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Course Flow
         .x-large
@@ -121,6 +126,7 @@ block slides
                   li Advanced topics
                   li Team-specific
                   li Creative
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 3.0 Code
         h5 Two Column Ordered List: Column 1
@@ -140,6 +146,7 @@ block slides
                 |              li Configure & manage
                 |              li Graphical front-end
                 |              li Persistent Storage
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 3.1 Code
         h5 Two Column Ordered List: Column 2
@@ -156,7 +163,8 @@ block slides
                 |                 ol
                 |                   li Advanced topics
                 |                   li Team-specific
-                |                   li Creative                
+                |                   li Creative
+        aside.notes Put presenter notes here                
     +slide&attributes(slideBackground)
         h1 Philosophy
           h3 Principle of Least Surprise
@@ -166,6 +174,7 @@ block slides
             ul
                 li 
                     a(href='http://www.linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html' target="_blank") http://www.linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 4 Code
         h5 Blockquotes with Attribution
@@ -181,6 +190,7 @@ block slides
                 |                li
                 |                   a(href='http://www.linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html' target="_blank")} 
                 |                   http://www.linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html}
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Duck Typing
         ul.fragment.fade-in
@@ -192,6 +202,7 @@ block slides
                 ul.fragment.fade-in
                     li.fragment.shrink everything has a type and objects don’t change type
                     li.fragment.grow Types aren’t checked unless code explicitly checks
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 5 Code
         h5 Animated Lists
@@ -208,6 +219,7 @@ block slides
                 |           ul.fragment.fade-in
                 |               li.fragment.shrink everything has a type and objects don’t change type
                 |               li.fragment.grow Types aren’t checked unless code explicitly checks
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Comments
         pre.ruby
@@ -224,6 +236,7 @@ block slides
                 | =begin 
                 | You might also come across this style for multi-line comments, but using # is more prevalent. 
                 | =end
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 6 Code
         h5 Ruby Syntax Highilighting #1: Comments
@@ -245,6 +258,7 @@ block slides
                 |            | =begin 
                 |            | You might also come across this style for multi-line comments, but using # is more prevalent. 
                 |            | =end
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Strings
         pre.ruby
@@ -263,6 +277,7 @@ block slides
                 | # we often need to trim whitespace off of a string
                 | "hello \n".strip
                 | #=> "hello"
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 7 Code
         h5 Ruby Syntax Highilighting #2: Strings
@@ -286,6 +301,7 @@ block slides
                 |            | # we often need to trim whitespace off of a string
                 |            | "hello \n".strip
                 |            | #=> "hello"
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Strings
         pre.ruby
@@ -295,6 +311,7 @@ block slides
                 |
                 |MY_GLOBAL_CONSTANT = "I am a constant"
                 |MY_GLOBAL_CONSTANT = "warning if you try to change me"
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 8 Code
         h5 Ruby Syntax Highilighting #3
@@ -309,6 +326,7 @@ block slides
                 |            |
                 |            |MY_GLOBAL_CONSTANT = "I am a constant"
                 |            |MY_GLOBAL_CONSTANT = "warning if you try to change me"
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1.labs Lab 02: Basic Types
         h2 Launch IRb (part 1/10)
@@ -323,6 +341,7 @@ block slides
                     | 2.3.3 :001 >
             li Exit <code>irb</code> by typing <code>exit</code>, <code>quit</code>, or CTRL+d (End of File)
             li Launch <code>irb</code> again for the next several sections of this lab
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 9 Code
         h5 Ruby Global Variables and Constants
@@ -342,6 +361,7 @@ block slides
                 |                | 2.3.3 :001 >
                 |        li Exit <code>irb</code> by typing <code>exit</code>, <code>quit</code>, or CTRL+d (End of File)
                 |        li Launch <code>irb</code> again for the next several sections of this lab
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 10
         h5 Speaker notes
@@ -354,6 +374,7 @@ block slides
                         li.fragment.fade-in  Current wall-clock time
                         li.fragment.fade-in  Time elapsed since the beginning of the presentation
                         li.fragment.fade-in  (Optional) Pacing timer that shows red if behind time, green if on time and blue if ahead of time
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 11
         h5 General Notes about Reveal.js + Pug
@@ -374,6 +395,7 @@ block slides
                     code.code-line-wrap.nohighlight.large
                         | li.fragment.fade-in a(href='link') on it's own indented line
                         |     a(href='https://google.com') A link
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 12
         h5 Other Things You Can Do With Reveal.js
@@ -387,6 +409,7 @@ block slides
                 li.fragment.fade-in Custom Print and Print to PDF stylesheets
                 li.fragment.fade-in Color, Image, Video, iFrame and Parallax backgrounds with Background Transitions
                 li.fragment.fade-in Cross-Slide Linking
+        aside.notes Put presenter notes here
     +slide&attributes(slideBackground)
         h1 Slide 13
         h5 Other Things You Can Do With Reveal.js (cont.)
@@ -399,3 +422,4 @@ block slides
                     a(href='https://pugjs.org/') https://pugjs.org/
                 li.fragment.fade-in And 
                     a(href='https://github.com/hakimel/reveal.js/') https://github.com/hakimel/reveal.js/
+        aside.notes Put presenter notes here
